--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-MONGO_URL = "mongodb+srv://ansaf23742:12345@cluster0.uy17h.mongodb.net/"
+MONGO_URL = "mongodb+srv://ansaf23742:12345@cluster0.uy17h.mongodb.net/data"
 JWT_SECRET_KEY = "12345"
 PORT = 5000
